leachbj - Thu June 17 2004
	Fixed up scroll wheel sensitivity
	Cleaned up some menu names
	Sliders now display heading correctly
	Added BlueCube (tetris clone) port from Matthis
	
leachbj - Sun June 06 2004
	In browser, execute .sh files as shell scripts
	Removed un-implemented menus to avoid confusion

Courtney Cavin - Fri June 4, 2004
	Cursor no longer erases edges of previosly selected pieces
	Score now shows at end along with the degrading comment.
	Computer player now likes edges and loves corners..
	Cursor only moves to valid moves

leachbj - Mon May 24 2004
	Fixed partial read/write bug
	Playback window now plays the file requested
	Tweaked record/playback buffer sizes

leachbj - Sun May 23 2004
	Added simple voice recording via microphone
	Added .raw file playback (44.1kHz only)

Courtney Cavin - Fri May 21, 2004
        Added Othello game

leachbj - Sat May 8 2004
	Merged Matthew's changes in
	Fixed backlight timer to work with GR_EVENT_TYPE_TIMEOUT
	Fixed reboot.

Matthew J. Sahagian - Sat Apr 10, 2004
	Added Backlight timer support for turning backlight off
	Support for turning backlight on at keypress
	Simplified event handling

Matthew J. Sahagian - Fri Apr 9, 2004
	Removed the "current directory" leading "." from file browser listing
	Changed "previous directory" "." to a double << listing
	Files without extensions are displayed as text

Matthew J. Sahagian - Thu Apr 08, 2004
	Added support for saving settings (contrast,clicker etc)
		Settings->Save Settings
		Settings->Load Settings
		Settings->Reset Settings
	Podzilla no longer exits on menu keypress at toplevel
	Added quit function

podzilla - 0.1 - Wed Feb 25 23:06:35 CET 2004
	Initial release

